align-items corrected in css

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ form {
     height: 43px;
     border-radius: 11px;
     display: flex;
-    alight-items: center;
+    align-items: center;
 }
 
 input {
